[project]
name = "PyRwu"
version = "0.0.3+kuresampler"
authors = [
    { name = "delta-kuro", email = "sankaku.kuro@gmail.com" },
    { name = "oatsu", email = "oatsu.dev@gmail.com" },
]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]

[build-system]
requires      = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["PyRwu*"]

[tool.ruff.lint]
ignore = ['N']

[tool.ruff.format]
line-ending = 'lf'
quote-style = "single"
